Fixed Team List not showing properly on smaller devices and cutting text on larger devices

--- a/src/common/tempteam.scss
+++ b/src/common/tempteam.scss
@@ -19,10 +19,11 @@
   margin-left: 10px;
   line-height: 0.1em;
   border-bottom: 2px solid #f6c90e;
-  width: 20%;
+  width: 350px;
   margin: 10px 0 20px;
   @media screen and (max-width: 720px) {
     margin: 10px 5px;
+    width: 200px;
   }
   // background: #fff;
   // :before {
